# YE-Pricing-Database

./: README.md  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  publish.js  tailwind.config.js  tsconfig.json  vite.config.ts
api/: Cargo.toml  Program.cs  README.MD  api.csproj  api.sln  build.bat  openapi.json  postman_collection.json  table.sql  yeinv.service
api/.bruno/Inventory Management API/: Health check endpoint.bru  bruno.json  collection.bru
api/.bruno/Inventory Management API/Readonly/: Check readonly mode.bru  Toggle readonly mode.bru
api/.bruno/Inventory Management API/Records/: Delete inventory record.bru  Insert inventory record.bru  Retrieve inventory records.bru  Update inventory record.bru
api/.bruno/Inventory Management API/Table/: Export database to CSV.bru  Truncate database.bru
api/Controllers/: InventoryController.cs  StatusController.cs
api/Models/: InventoryEntryListResult.cs  InventoryEntryModel.cs
api/src/: database_config.rs  database_row_entry.rs  db_access.rs  httaccess.rs  main.rs
src/: main.tsx
src/assets/components/: ConfirmModal.tsx  DatabaseListComponent.tsx  EditRecordModal.tsx  EmployeesAutocomplete.tsx  Icons.tsx  ImageCard.tsx  ListFilterOptions.tsx  MardensLogo.tsx  Navigation.tsx  ThemeSwitcher.tsx
src/assets/images/: process.js
src/assets/pages/: DepartmentsPage.tsx  FullListPage.tsx  LoginPage.tsx  ProcessingPage.tsx  StoresPage.tsx
src/assets/providers/: AlertModalProvider.tsx  Readonly.tsx
tests/YEInvStressTester/: README.MD  StressTester.cs  YEInvStressTester.sln
(+6 files in other folders)
