[package]
name = "years_end_pricing_database_api"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
mysql = "25.0.1"
reqwest = "0.12.5"