[package]
name = "years_end_pricing_database_api"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.8.0" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
mysql = { version = "25.0.1", features = ["chrono"] }
reqwest = { version = "0.12.5", features = ["json"] }
urlencoding = "2.1.3"
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
log = "0.4.22"
env_logger = "0.11.6"